# pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  lexicon.yaml  pyproject.toml  submissions.yaml
pipeline/: __main__.py  cli.py  config.py
pipeline/asr/: qwen.py  qwen_omni.py  transcribe.py
pipeline/diarize/: enroll.py  speakers.py  word_voiceprint.py
pipeline/postprocess/: format.py  lexicon.py  title_clean.py
pipeline/scripts/: md_to_dialogue.py  polish.py  text_classify.py  voice_reclassify.py
pipeline/sources/: __init__.py  base.py  bilibili.py  local.py  youtube.py
pipeline/translate/: qwen_text.py
scripts/: batch-ingest.sh  overnight-docker.sh  overnight.sh  setup.sh
