[project]
name = "manzai-archive-pipeline"
version = "0.1.0"
description = "Ingest video URLs and produce speaker-labeled manzai scripts"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "faster-whisper>=1.1.0",
    "pyannote.audio>=3.3.0",
    "torch>=2.4",
    "torchaudio>=2.4",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-slugify>=8.0",
    "python-dotenv>=1.0",
    # Apple-Silicon GPU backend via MLX (Metal + Neural Engine).
    # Skipped on non-arm64 / non-darwin hosts.
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
manzai = "pipeline.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
